# nagyHazi

./: .gitignore  CMakeLists.txt  Nagy_Hazi.cbp  UI.c  UI.h  debugmalloc.h  econio.c  fajlkezeles.c  fajlkezeles.h  jatek.c  jatek.h  kiiras.c  kiiras.h  main.c
